--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,9 +1,42 @@
+@charset "utf-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
 
 body {
+    height: 100vh;
+    width: 100vw;
     background-image: url("/imagens/fundo-madeira.jpg");
-    background-position: right top;
-    background-size: 1920px 1080px;
+    background-position: top center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-size: cover;
+    
+    
 }
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+div#telefone {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 627px;
+    width: 311px;
+    background: url('/imagens/frame-iphone.png') no-repeat;
+    
+    
+}
+
+
+
+
+
