--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,6 +36,14 @@ div#telefone {
     
 }
 
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 270px;
+    height: 470px;
+}
+
 
 
 
