att botões laterais

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,7 +24,7 @@ main {
 
 }
 
-div#telefone {
+section#telefone {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -37,11 +37,49 @@ div#telefone {
 }
 
 iframe#tela {
+    display: inline;
     position: relative;
     top: 80px;
     left: 22px;
     width: 270px;
     height: 470px;
+}
+
+iframe#telayt {
+    display: inline;
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 270px;
+    height: 470px;
+}
+
+
+.circulo {
+    border-radius: 50%;
+    padding: 10px;
+    height: 50px;
+}
+
+section#redes img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.400);
+    box-sizing: border-box;
+ 
+}
+
+section#redes {
+    text-align: center;
+}
+
+section#redes img:hover {
+    transform: translate(-5px, -5px);
+    border: 2px solid rgba(150, 147, 147, 0.281);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.486);
+    transition: transform 0.3s;
+    
 }
 
 
